After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 648105 - bad handshake len: sizeof (unsgned char *) != sizeof (unsigned char[])
bad handshake len: sizeof (unsgned char *) != sizeof (unsigned char[])
Status: RESOLVED FIXED
Product: gnome-keyring
Classification: Core
Component: pkcs11
git master
Other Linux
: Normal minor
: ---
Assigned To: GNOME keyring maintainer(s)
GNOME keyring maintainer(s)
Depends on:
Blocks:
 
 
Reported: 2011-04-18 13:07 UTC by Corentin Chary
Modified: 2011-04-18 13:18 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Corentin Chary 2011-04-18 13:07:27 UTC
Currently GKM_PC_HANDSHAKE value is wrong (4 on x86, 8 on x86_64).
Here is a patch to use strlen() instead.

diff --git a/pkcs11/rpc-layer/gkm-rpc-private.h b/pkcs11/rpc-layer/gkm-rpc-private.h
index 92e58dd..525f8f8 100644
--- a/pkcs11/rpc-layer/gkm-rpc-private.h
+++ b/pkcs11/rpc-layer/gkm-rpc-private.h
@@ -214,7 +214,7 @@ static const GkmRpcCall gkm_rpc_calls[] = {
 #define GKM_RPC_HANDSHAKE \
        ((unsigned char*)"PRIVATE-GNOME-KEYRING-PKCS11-PROTOCOL-V-1")
 #define GKM_RPC_HANDSHAKE_LEN \
-       (sizeof (GKM_RPC_HANDSHAKE) - 1)
+       (strlen ((char *)GKM_RPC_HANDSHAKE))
 
 #define GKM_RPC_SOCKET_EXT     "pkcs11"
Comment 1 Stef Walter 2011-04-18 13:18:26 UTC
Merged into gnome-3-0, and will merge that into master at some point soon.


commit 2c7a6d8bcab79aa4262dc29c028f0bbb792f2bfa
Author: Corentin Chary <corentin.chary>
Date:   Mon Apr 18 15:15:07 2011 +0200

    rpc-layer: Fix bad handshake length macro.
    
    https://bugzilla.gnome.org/show_bug.cgi?id=648105