rpc-layer: Fix bad handshake length macro.

https://bugzilla.gnome.org/show_bug.cgi?id=648105